crates/lucard_domain/src/transformer/snapshots/lucard_domain__transformer__reasoning_normalizer__tests__reasoning_normalizer_removes_all_when_first_assistant_message_has_no_reasoning.snap
---
source: crates/lucard_domain/src/transformer/reasoning_normalizer.rs
expression: snapshot
---
transformation: ReasoningNormalizer_first_no_reasoning
before:
  messages:
    - text:
        role: User
        content: User message
    - text:
        role: Assistant
        content: First assistant without reasoning
    - text:
        role: Assistant
        content: Second assistant with reasoning
        reasoning_details:
          - text: Complex reasoning process
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type_of: ~
    - text:
        role: Assistant
        content: Third assistant with reasoning
        reasoning_details:
          - text: Complex reasoning process
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type_of: ~
  reasoning:
    enabled: true
after:
  messages:
    - text:
        role: User
        content: User message
    - text:
        role: Assistant
        content: First assistant without reasoning
    - text:
        role: Assistant
        content: Second assistant with reasoning
    - text:
        role: Assistant
        content: Third assistant with reasoning
